@@ -1,3 +1,8 @@
+2010-11-16  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclPlatDecls.h [Bug #3110161]: Extensions using TCHAR don't compile
+	on VS2005 SP1
+
 2010-11-15  Andreas Kupries  <andreask@activestate.com>
 
 	* doc/interp.n: [3081184] TIP #378.
